@@ -1,0 +1,2 @@
+co.elastic.apm.agent.scala.concurrent.FutureInstrumentation$ConstructorInstrumentation
+co.elastic.apm.agent.scala.concurrent.FutureInstrumentation$RunInstrumentation
