@@ -85,9 +85,9 @@
         <version.error_prone>2.2.0</version.error_prone>
         <version.h2>1.4.196</version.h2>
         <version.jackson>[2.10.0,)</version.jackson>
-        <version.junit-jupiter>5.4.2</version.junit-jupiter>
-        <version.junit.vintage>4.12</version.junit.vintage>
-        <version.junit-vintage-engine>5.3.2</version.junit-vintage-engine>
+        <version.junit-jupiter>5.6.2</version.junit-jupiter>
+        <version.junit.vintage>4.13</version.junit.vintage>
+        <version.junit-vintage-engine>5.6.2</version.junit-vintage-engine>
         <version.logback>1.2.3</version.logback>
         <version.okhttp>3.9.1</version.okhttp>
         <version.slf4j>1.7.25</version.slf4j>
@@ -426,13 +426,8 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
+                    <version>2.22.2</version>
                     <dependencies>
-                        <dependency>
-                            <groupId>org.junit.platform</groupId>
-                            <artifactId>junit-platform-surefire-provider</artifactId>
-                            <version>1.1.1</version>
-                        </dependency>
                         <dependency>
                             <groupId>org.junit.vintage</groupId>
                             <artifactId>junit-vintage-engine</artifactId>
@@ -444,6 +439,11 @@
                             <version>${version.junit-jupiter}</version>
                         </dependency>
                     </dependencies>
+                    <configuration>
+                        <includes>
+                            <include>**/*Spec.*</include>
+                        </includes>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
