@@ -34,6 +34,7 @@ endif::[]
 * Added support for `java.util.TimerTask` - {pull}1235[#1235]
 * Add capturing of request body in Elasticsearch queries: `_msearch`, `_count`, `_msearch/template`, `_search/template`, `_rollup_search` - {pull}1222[#1222]
 * Add <<config-enabled,`enabled`>> flag
+* Add experimental support for Scala Futures
 
 [float]
 ===== Bug fixes
